# AudioRedirector

./: .clang-format  CMakeLists.txt  CMakePresets.json  Readme.md  deploy_once.cmake  resources.qrc  resources.rc  setup.iss
src/: MainApplication.cpp  MainWindow.cpp  MainWindow.hpp
src/Audio/: AudioRedirector.cpp  AudioRedirector.hpp  MAConvert.cpp  MAConvert.hpp
src/Utils/: Error.hpp  Format.cpp  Log.cpp  Log.hpp  Result.hpp  Utils.cpp  Utils.hpp  WinError.hpp  source_location.h
src/ViewModels/: MainViewModel.cpp  MainViewModel.hpp
src/Views/: MainView.cpp  MainView.hpp
src/Widgets/: Container.cpp  Container.hpp  CustomGroupBox.cpp  CustomGroupBox.hpp  SmoothSlider.cpp  SmoothSlider.hpp
styles/: style.qss
